--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
-    <link rel="stylesheet" href="/edit.css">
+    <link rel="stylesheet" href="/static/edit.css">
   </head>
   <body>
     <h1>{{ restaurant.name }}</h1>
@@ -30,7 +30,7 @@
       </div>
     </div>
     {% endfor %}
-    <div id="toaster hidden"><p></p></div>
+    <div id="toaster" class="hidden toaster-offscreen"><p></p></div>
   </body>
-  <script src="/edit.js"></script>
+  <script src="/static/edit.js"></script>
 </html>
