--- a/templates/edit.html
+++ b/templates/edit.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     {% endfor %}
-    <div id="toaster" class="hidden toaster-offscreen"><p></p></div>
+    <div class="toaster hidden toaster-offscreen"><p></p></div>
   </body>
   <script src="/static/edit.js"></script>
 </html>
