--- a/templates/edit.html
+++ b/templates/edit.html
@@ -32,5 +32,6 @@
     {% endfor %}
     <div class="toaster hidden toaster-offscreen"><p></p></div>
   </body>
-  <script src="/static/edit.js"></script>
+  <script src="/static/toaster.js" type="module"></script>
+  <script src="/static/edit.js" type="module"></script>
 </html>
