feat: Adds edit functionality
Save button updates database with
modified information

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -24,7 +24,13 @@
         </div>
       </div>
       <div class="controls">
-        <a class="save-link" data-id="{{ i.id }}" href="javascript:void(0)">
+        <a
+          class="save-link"
+          data-id="{{ i.id }}"
+          data-restaurantid="{{ restaurant.id }}"
+          data-name="{{ i.name }}"
+          href="javascript:void(0)"
+        >
           Save
         </a>
       </div>
