--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,9 @@
     src="//ajax.googleapis.com/js/client:platform.js?onload=start"
     async defer>
   </script>
+  <script>
+    const pToaster = JSON.parse('{{toaster|safe}}')
+  </script>
 </head>
 <body>
   <div id="signinButton">
