--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,6 +3,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <script>
+      const pToaster = JSON.parse('{{toaster|safe}}')
+    </script>
     <style>
         .container {
             width: 20vw;
