fix: Fixes sqlalchemy bug

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -36,7 +36,9 @@
       </div>
     </div>
     {% endfor %}
-    <div class="toaster hidden toaster-offscreen"><p></p></div>
+    <div class="toaster hidden toaster-offscreen">
+      <p></p>
+    </div>
   </body>
   <script src="/static/utilities.js" type="module"></script>
   <script src="/static/toaster.js" type="module"></script>
