--- a/static/edit.css
+++ b/static/edit.css
@@ -33,6 +33,9 @@ input {
 }
 .controls {
   padding-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .toaster {
   align-items: center;
