--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
   <script
-    src="//ajax.googleapis.com/js/client:platform.js?onload=start"
+    src="//apis.google.com/js/platform.js?onload=start"
     async defer>
   </script>
 </head>
