--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="{{CLIENT_ID}}">
     <title>Catalog App</title>
     <link rel="stylesheet" href="/static/styles.css" />
     <style>
