--- a/templates/login.html
+++ b/templates/login.html
@@ -4,30 +4,83 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="{{CLIENT_ID}}">
+  <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
+</head>
   <title>Login</title>
-  <script
-    src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-  </script>
-  <script
-    src="//apis.google.com/js/platform.js?onload=start"
-    async defer>
-  </script>
 </head>
 <body>
+  <a id="logout" href="javascript:void(0)">Logout</a>
   <div id="signinButton">
-    <span class="g-signin"
+    <div class="g-signin2"
+      data-onsuccess="signInCallback"
       data-scope="openid email"
-      data-clientid="{{client_id}}"
-      data-redirecturi="postmessage"
       data-accesstype="offline"
-      data-cookiepolicty="single_host_origin"
-      data-callback="signInCallback"
-      data-approvalprompt="force">
-    </span>
+      data-approvalprompt="force"
+      data-theme="dark">
+    </div>
+    <!-- <div id="google-signin-button"></div> -->
   </div>
   <div id="result"></div>
   <script>
+    function signInCallbackOutdated(googleUser) {
+      // Useful data for your client-side scripts:
+      const profile = googleUser.getBasicProfile()
+      console.log("ID: " + profile.getId()) // Don't send this directly to your server!
+      console.log('Full Name: ' + profile.getName())
+      console.log('Given Name: ' + profile.getGivenName())
+      console.log('Family Name: ' + profile.getFamilyName())
+      console.log("Image URL: " + profile.getImageUrl())
+      console.log("Email: " + profile.getEmail())
+
+      // The ID token you need to pass to your backend:
+      const id_token = googleUser.getAuthResponse().id_token
+      console.log(googleUser.code)
+      debugger;
+      fetch('/gconnect', {
+        method: 'POST',
+        headers: {
+          'content-type': 'application/json',
+        },
+        body: JSON.stringify({
+          state: '{{STATE}}',
+          id_token,
+          'code': googleUser.code,
+        })
+      })
+        .then(res => {
+          console.log(res)
+        })
+    }
+
+    function signOut() {
+      const auth2 = gapi.auth2.getAuthInstance()
+      auth2.signOut().then(() => {
+        document.querySelector('#signinButton').style.display = 'block'
+        fetch('/gdisconnect')
+      })
+    }
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelector('#logout').addEventListener('click', (e) => {
+        e.preventDefault()
+        signOut()
+      })
+    })
+
+    function onLoad() {
+      gapi.load('auth2,signin', () => {
+        const auth2 = gapi.auth2.init()
+        auth2.then(() => {
+          // Current values
+          const isSignedIn = auth2.isSignedIn.get()
+          const currentUser = auth2.currentUser.get()
+        })
+      })
+    }
+
     function signInCallback(authResult) {
+      console.log('callback made: ', authResult)
       if(authResult && authResult.code) {
         const resultElement = document.querySelector('#result')
         document.querySelector('#signinButton').style.display = 'none'
@@ -43,7 +96,7 @@
               resultElement.innerHTML =
                 `Login Successful!<br/>${result}<br/>Redirecting...`
               setTimeout(() => {
-                window.location.href = '/restaurant'
+                window.location.href = '/'
               }, 4000)
             } else if(authResult.error) {
               console.log('There was an error: ', authResult.error)
@@ -56,6 +109,8 @@
               Serverside Error: ${JSON.stringify(err, null, 2)}
             `
           })
+      } else {
+        console.error(authResult, authResult && authResult.code)
       }
     }
   </script>
