--- a/templates/edit.html
+++ b/templates/edit.html
@@ -18,28 +18,39 @@
     <h1>{{ category.name }}</h1>
     <div class="item-list">
       {% for i in items %}
-      <div class="container">
-        <div class="content" id="content-{{ i.id }}" data-id="{{ i.id }}">
-          <input class="value name" type="text" value="{{ i.name }}" />
-          <textarea
-            rows="15"
-            class="value description"
-            data-description="{{ i.description }}"
-          >
-          </textarea>
-        </div>
-        <div class="controls">
-          <a
-            class="save-link"
-            data-id="{{ i.id }}"
-            data-categoryid="{{ category.id }}"
-            data-name="{{ i.name }}"
-            href="javascript:void(0)"
-          >
-            Save
-          </a>
-        </div>
-      </div>
+        {% if session_user['gplus_id'] in i.owner_id %}
+          <div class="container">
+            <div class="content" id="content-{{ i.id }}" data-id="{{ i.id }}">
+              <input class="value name" type="text" value="{{ i.name }}" />
+              <textarea
+                rows="15"
+                class="value description"
+                data-description="{{ i.description }}"
+              >
+              </textarea>
+            </div>
+            <div class="controls">
+              <a
+                class="save-link"
+                data-id="{{ i.id }}"
+                data-categoryid="{{ category.id }}"
+                data-name="{{ i.name }}"
+                href="javascript:void(0)"
+              >
+                Save
+              </a>
+            </div>
+          </div>
+        {% else %}
+          <div class="container">
+            <div class="content">
+              <h3>{{ i.name }}</h3>
+              {% for desc in i.description.splitlines() %}
+              <p>{{ desc }}</p>
+              {% endfor %}
+            </div>
+          </div>
+        {% endif %}
       {% endfor %}
     </div>
     <div class="toaster hidden toaster-offscreen">
