chore: Removes in-list view Edit
in-list view editting not part of specs
Causing issues and mostly code bloat
Single item edit pages replaces this feature

--- a/templates/create.html
+++ b/templates/create.html
@@ -17,8 +17,11 @@
           <input class="value name" required type="text" placeholder="Item name" />
           <div class="description-container">
             <label for="description">Description:</label>
-            <textarea rows="15" id="description" class="value description">
-            </textarea>
+            <textarea
+              rows="15"
+              id="description"
+              class="value description"
+            ></textarea>
           </div>
           <select class="value category" name="select" id="category" required>
             <option selected disabled hidden>Select a category...</option>
