--- a/templates/item.html
+++ b/templates/item.html
@@ -72,6 +72,7 @@
                 if(res.response && res.response === 'success') {
                   const container = deleteLink.parentElement.parentElement
                   container.parentElement.removeChild(container)
+                  window.location.href = '/'
                 } else {
                   console.error(JSON.stringify(res,0,2))
                 }
