fix: Fixes google image render
When not logged in, container object will not
be rendered. Don't attempt to append image

--- a/templates/login.html
+++ b/templates/login.html
@@ -94,7 +94,7 @@
           .then(result => {
             if(result) {
               resultElement.innerHTML =
-                `Login Successful!<br/>${result}<br/>Redirecting...`
+                `Login Successful!<br/>${JSON.stringify(result,0,2)}<br/>Redirecting...`
               setTimeout(() => {
                 window.location.href = '/'
               }, 4000)
