--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -7,8 +7,11 @@
     })
     document.addEventListener('DOMContentLoaded', () => {
       const container = document.querySelector('.google-image-container')
-      container.querySelector('.google-image').src = sessionUser.picture
-      container.querySelector('.tooltip').innerText = sessionUser.token
+      // If no container then user is logged out
+      if(container) {
+        container.querySelector('.google-image').src = sessionUser.picture
+        container.querySelector('.tooltip').innerText = sessionUser.token
+      }
     })
   </script>
   <a class="navbar-link" href="/">Catalog</a>
